--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Run a multi-line script
         run: |
           echo Add other actions to build,
-          echo test, and deploy your project.
+          echo test, and deploy your project.jhg
   build4:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
