--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -32,7 +32,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Add other actions to build,hhnn
+          echo Add other actions to build,hhnngcx
           echo test, and deploy your project.bnnbnnbbbxc
   build2:
     # The type of runner that the job will run on
