--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -159,7 +159,7 @@ jobs:
       - name: Run a multi-line script
         run: |
           echo Add other actions to build,
-          echo test, and deploy your project.
+          echo test, and deploy your project.bbaba
   build9:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
