--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -68,7 +68,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Add other actions to build,
+          echo Add other actions to build,hdhdb
           echo test, and deploy your project.jhg
   build4:
     # The type of runner that the job will run on
