--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Run a multi-line scriptkllm
         run: |
           echo Add other actions to build,
-          echo test, and deploy your project.
+          echo test, and deploy your project.hjjn
   build3:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
