--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI4
+name: CXI4
 
 # Controls when the workflow will run
 on:
